# docker-podman-desktop

./: .gitignore  check_results.txt  components.json  dump_volumes.py  package.json  svelte.config.js  tsconfig.json  vite.config.js
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  shared.rs  streaming.rs
src-tauri/src/helper/: cli.rs  mod.rs
src-tauri/src/helper/parse/: containers.rs  files.rs  images.rs  mod.rs  networks.rs  stats.rs  volumes.rs
src-tauri/src/types/: mod.rs
src-tauri/templates/: mysql.json  postgres.json
src/lib/: tauri.ts  types.ts  utils.ts
src/lib/components/: BuildModal.svelte  ConfirmationModal.svelte  ExecModal.svelte  FilesModal.svelte  InspectModal.svelte  LogsModal.svelte  PullModal.svelte  Sidebar.svelte  TagModal.svelte  Toasts.svelte  VirtualList.svelte
src/lib/components/ui/: Container.svelte  PageHeader.svelte  StatusBadge.svelte
src/lib/i18n/: en.json  es.json
src/lib/services/: docker.service.ts  updater.service.ts
src/lib/stores/: docker.svelte.ts  i18n.svelte.ts  settings.svelte.ts  toasts.svelte.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/containers/: +page.svelte
src/routes/containers/components/: ComposeGroup.svelte  TemplateCard.svelte  (+2 more)
src/routes/images/: +page.svelte
src/routes/marketplaces/: +page.svelte
src/routes/metrics/: +page.svelte
src/routes/networks/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/volumes/: +page.svelte
src/styles/: global.css
src/types/: docker.ts
(+61 files in other folders)
